--- a/taraluga.yaml
+++ b/taraluga.yaml
@@ -1,22 +1,25 @@
-Bazinga
 - size: 3
   lines:
   - Sti
   - iSt
   - tiS
+  but: S
 - size: 3
   lines:
   - $St
   - St$
   - t$S
+  but: $
 - size: 3
   lines:
   - SDm
   - DmS
   - mSD
+  but: m
 - size: 4
   lines:
   - $@tS
   - S$@t
   - tS$@
   - '@tS$'
+  but: $
